# resux

./: .env.example  .gitignore  pyproject.toml
src/resume/: __init__.py  form.py  settings.py  utils.py  workspace.py  ws.py
src/resume/ai/: __init__.py  activity.py  core.py  project_judge.py  project_selection.py  selection.py  summary.py  tags.py
src/resume/cli/: __init__.py  _state.py  project.py
src/resume/git/: __init__.py  github.py
src/resume/job_boards/: no_fluff_jobs.py
src/resux/: utils.py  ws.py
src/resux/ai/: __init__.py  _util.py  activity.py  core.py  selection.py  skills.py  summary.py  tags.py
src/resux/cli/: __init__.py  _ctx.py  _state.py  profile.py  project.py  skill.py
src/resux/git/: __init__.py  github.py
src/resux/job_boards/: __init__.py  no_fluff_jobs.py
src/resux/ws/: __init__.py  collection.py  format.py  resource.py
